--- a/products.html
+++ b/products.html
@@ -38,8 +38,10 @@
   </nav>
   <main class="pb-5 container">
     <div class="container">
-      <div class="alert alert-danger text-center" role="alert">
-        <h4 class="alert-heading">Funcionalidad en desarrollo</h4>
+      
+      </div>
+      <div id="container">
+
       </div>
     </div>
   </main>
