--- a/products.html
+++ b/products.html
@@ -10,6 +10,8 @@
   <link href="css/font-awesome.min.css" rel="stylesheet">
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="css/styles.css" rel="stylesheet">
+  <link href="css/product.css" rel="stylesheet">
+
 </head>
 
 <body>
