--- a/login.html
+++ b/login.html
@@ -18,12 +18,38 @@
 
 <body>
   <main class="mt-5">
-    <div class="container">
-      <div class="alert alert-danger text-center" role="alert">
-        <h4 class="alert-heading">Funcionalidad en desarrollo</h4>
-      </div>
+
+    <div id="contenedor">
+
+      <img src="img/login.png" alt="">
+
+      <form action="" id="formulario">
+
+        <h1 class="cont">Inicio de sesión</h1>
+
+        <label for="name"></label>
+        <input class="cont" type="text" placeholder="Email">
+  
+        <br>
+  
+        <label for="name"></label>
+        <input class="cont" id="password" type="password" placeholder="Constraseña" required>
+  
+        <br>
+
+       <!-- <p><a id="forgotPass" href="">¿Olvidaste tu contraseña?</a></p> --> 
+
+        <label for="mostrarPass" class="cont" >Mostrar contraseña</label>
+        <input id="mostrarPass" class="cont" type="checkbox"> 
+  
+        <input class="cont" type="submit" value="Ingresar">
+  
+      </form>  
+
     </div>
+
   </main>
+
   <footer class="text-muted">
     <div class="container">
       <p class="float-end">
