arreglo email y mostrar
agregué el required del mail y logré que el texto mostrar contraseña quede al lado del checkbox

--- a/login.html
+++ b/login.html
@@ -28,7 +28,7 @@
         <h1 class="cont">Inicio de sesión</h1>
 
         <label for="name"></label>
-        <input class="cont" type="text" placeholder="Email">
+        <input class="cont" type="text" placeholder="Email" required>
   
         <br>
   
