login redirige a inicio

--- a/login.html
+++ b/login.html
@@ -23,7 +23,7 @@
 
       <img src="img/login.png" alt="">
 
-      <form action="" id="formulario">
+      <form action="index.html" id="formulario">
 
         <h1 class="cont">Inicio de sesión</h1>
 
