--- a/login.html
+++ b/login.html
@@ -8,57 +8,55 @@
   
   <link href="https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
   <link href="css/bootstrap.min.css" rel="stylesheet">
-  <link href="css/styles.css" rel="stylesheet">
-  <style>
-    body {
-      background-color: rgb(248, 249, 250);
-    }
-  </style>
+  <link href="css/login.css" rel="stylesheet">
+
 </head>
 
 <body>
   <main class="mt-5">
 
-    <div id="contenedor">
-
-      <img src="img/login.png" alt="">
-
-      <form action="index.html" id="formulario">
-
-        <h1 class="cont">Inicio de sesión</h1>
-
-        <label for="name"></label>
-        <input class="cont" type="text" placeholder="Email" required>
+    <fieldset>
+      <main class="mt-5">
   
-        <br>
+        <div id="contenedor">
   
-        <label for="name"></label>
-        <input class="cont" id="password" type="password" placeholder="Constraseña" required>
+          <img src="img/login.png" alt="Logo de e-mercado">
   
-        <br>
-
-       <!-- <p><a id="forgotPass" href="">¿Olvidaste tu contraseña?</a></p> --> 
-
-        <label for="mostrarPass" class="cont" >Mostrar contraseña</label>
-        <input id="mostrarPass" class="cont" type="checkbox"> 
+          <form action="" id="formulario">
   
-        <input class="cont" type="submit" value="Ingresar">
+            <h1>Inicio de sesión</h1>
   
-      </form>  
+            <label for="name"></label>
+            <input id="name" type="text" placeholder="Email">
+  
+            <br>
+  
+            <label for="name"></label>
+            <input id="password" type="password" placeholder="Constraseña" required>
+  
+            <br>
+  
+            <!-- <p><a id="forgotPass" href="">¿Olvidaste tu contraseña?</a></p> -->
+  
+            <label for="mostrarPass" class="cont">Mostrar contraseña</label>
+            <input id="mostrarPass" class="cont" type="checkbox">
+            <br>
+            <input id="submit" type="submit" value="Ingresar">
+  
+          </form>
 
-    </div>
+        </div>
+  
+      </main>
+    </fieldset>
+    <br>
 
-  </main>
-
-  <footer class="text-muted">
-    <div class="container">
-      <p class="float-end">
-        <a href="#">Volver arriba</a>
-      </p>
-      <p>Este sitio forma parte de <a href="https://jovenesaprogramar.edu.uy/" target="_blank">Jovenes a Programar</a></p>
-    </div>
-  </footer>
-  <script src="js/login.js"></script>
-</body>
-
-</html>
+    <footer>
+      <p><a href="#">Volver arriba</a></p>
+      <p>Este sitio forma parte de <a href="https://jovenesaprogramar.edu.uy/" target="_blank">Jóvenes a Programar</a></p>
+    </footer>
+  
+    <script src="js/login.js"></script>
+  
+  </body>
+  </html>
