--- a/login.html
+++ b/login.html
@@ -22,12 +22,12 @@
   
           <img src="img/login.png" alt="Logo de e-mercado">
   
-          <form action="" id="formulario">
+          <form action="index.html" id="formulario">
   
             <h1>Inicio de sesión</h1>
   
             <label for="name"></label>
-            <input id="name" type="text" placeholder="Email">
+            <input id="name" type="text" placeholder="Email" required>
   
             <br>
   
