--- a/login.html
+++ b/login.html
@@ -27,21 +27,21 @@
             <h1>Inicio de sesión</h1>
   
             <label for="name"></label>
-            <input id="name" type="text" placeholder="Email" required>
+            <input id="email" type="text" placeholder="Email" required>
   
             <br>
   
             <label for="name"></label>
-            <input id="password" type="password" placeholder="Constraseña" required>
+            <input id="password" type="password" placeholder="Constraseña"  required>
   
             <br>
   
-            <!-- <p><a id="forgotPass" href="">¿Olvidaste tu contraseña?</a></p> -->
+            <p><a id="forgotPass" href="#">¿Olvidaste tu contraseña?</a></p> 
   
             <label for="mostrarPass" class="cont">Mostrar contraseña</label>
             <input id="mostrarPass" class="cont" type="checkbox">
             <br>
-            <input id="submit" type="submit" value="Ingresar">
+            <input id="submit" type="submit" value="Ingresar" >
   
           </form>
 
