--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
             <a class="nav-link" href="sell.html">Vender</a>
           </li>
           <li class="nav-item">
+            <span class="nav-link"><span id="email"></span></span>
           </li>
         </ul>
       </div>
