--- a/products.html
+++ b/products.html
@@ -40,7 +40,12 @@
   </nav>
   <main class="pb-5 container">
     <div class="container">
-        <div class="row">
+        <div class="row mb-3">
+          <div class="col mt-4">
+            <div class="input-group">
+              <input type="search" class="form-control" placeholder="Buscar productos" id="search">
+              <button class="btn btn-light btn-block" id="btnsearch">Buscar</button>
+            </div>
           <div class="col text-end">
             <div class="btn-group btn-group-toggle mb-4" data-bs-toggle="buttons">
               <input type="radio" class="btn-check" name="options" id="sortAsc">
