--- a/product-info.html
+++ b/product-info.html
@@ -1,4 +1,9 @@
 <!DOCTYPE html>
+</head>
+<body>
+  
+</body>
+</html>
 <html lang="es">
 
 <head>
@@ -37,9 +42,32 @@
     </div>
   </nav>
   <main>
-    <div class="container">
-      <div class="alert alert-danger text-center" role="alert">
-        <h4 class="alert-heading">Funcionalidad en desarrollo</h4>
+    <div class="container" id="container">
+      
+      </div>
+      <div id="containerComentarios">
+
+      </div>
+      <div>
+        <h3>Comentar</h3>
+        <hr class="my-3">
+        <div class="form-group">
+          <label for="comentario">Tu opinión:</label>
+          <textarea id="comentario" class="form-control" rows="3"></textarea>
+        </div>
+        <div class="form-group">
+          <label for="puntuacion">Tu puntuación:</label>
+          <select id="puntuacion" class="form-control">
+            <option>1</option>
+            <option>2</option>
+            <option>3</option>
+            <option>4</option>
+            <option>5</option>
+          </select>
+        </div>
+        <div class="form-group">
+          <button class="btn btn-primary">Enviar</button>
+        </div>
       </div>
     </div>
   </main>
