--- a/product-info.html
+++ b/product-info.html
@@ -15,6 +15,7 @@
   <link href="css/font-awesome.min.css" rel="stylesheet">
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="css/styles.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -48,6 +49,7 @@
       <div id="containerComentarios">
 
       </div>
+      <!--Se crea el formulario para ingresar comentarios.-->
       <div>
         <h3>Comentar</h3>
         <hr class="my-3">
