--- a/product-info.html
+++ b/product-info.html
@@ -66,7 +66,7 @@
           </select>
         </div>
         <div class="form-group">
-          <button class="btn btn-primary">Enviar</button>
+          <button class="btn btn-primary" id="comentBtn">Enviar</button>
         </div>
       </div>
     </div>
