Actualizar product-info.html

--- a/product-info.html
+++ b/product-info.html
@@ -38,6 +38,9 @@
           </li>
           <li class="nav-item">
           </li>
+           <li class="nav-item">
+            <span class="nav-link"><span id="email"></span></span>
+          </li>
         </ul>
       </div>
     </div>
