--- a/index.html
+++ b/index.html
@@ -29,9 +29,18 @@
           <li class="nav-item">
             <a class="nav-link" href="sell.html">Vender</a>
           </li>
-          <li class="nav-item">
-            <span class="nav-link"><span id="email"></span></span>
-          </li>
+        
+          <div class="dropdown">
+            <button class="btn btn-secondary dropdown-toggle" type="button" id="email" data-bs-toggle="dropdown" aria-expanded="false">
+              Nombre de Usuario
+            </button>
+            <ul class="dropdown-menu" aria-labelledby="email">
+              <li><a class="dropdown-item" href="cart.html">Mi Carrito</a></li>
+              <li><a class="dropdown-item" href="my-profile.html">Mi Perfil</a></li>
+              <li><a class="dropdown-item" href="login.html">Cerrar Sesión</a></li>
+            </ul>
+          </div>
+          
         </ul>
       </div>
     </div>
