update menu desplegable
Puse el menu desplegable del usuario en todas las paginas menos en inicio de sesion

--- a/categories.html
+++ b/categories.html
@@ -32,9 +32,18 @@
           </li>
           <li class="nav-item">
           </li>
-           <li class="nav-item">
-            <span class="nav-link"><span id="email"></span></span>
           </li>
+          <div class="dropdown">
+            <button class="btn btn-secondary dropdown-toggle" type="button" id="email" data-bs-toggle="dropdown" aria-expanded="false">
+              Nombre de Usuario
+            </button>
+            <ul class="dropdown-menu" aria-labelledby="email">
+              <li><a class="dropdown-item" href="cart.html">Mi Carrito</a></li>
+              <li><a class="dropdown-item" href="my-profile.html">Mi Perfil</a></li>
+              <li><a class="dropdown-item" href="login.html">Cerrar Sesión</a></li>
+              <li><a class="dropdown-item" id="darkMode">Modo Oscuro</a></li>
+            </ul>
+          </div>
         </ul>
       </div>
     </div>
