--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
               <li><a class="dropdown-item" href="cart.html">Mi Carrito</a></li>
               <li><a class="dropdown-item" href="my-profile.html">Mi Perfil</a></li>
               <li><a class="dropdown-item" href="login.html">Cerrar Sesión</a></li>
+              <li><a class="dropdown-item" id="darkMode">Modo Oscuro</a></li>
             </ul>
           </div>
           
