--- a/sell.html
+++ b/sell.html
@@ -31,6 +31,17 @@
           </li>
           <li class="nav-item">
           </li>
+          <div class="dropdown">
+            <button class="btn btn-secondary dropdown-toggle" type="button" id="email" data-bs-toggle="dropdown" aria-expanded="false">
+              Nombre de Usuario
+            </button>
+            <ul class="dropdown-menu" aria-labelledby="email">
+              <li><a class="dropdown-item" href="cart.html">Mi Carrito</a></li>
+              <li><a class="dropdown-item" href="my-profile.html">Mi Perfil</a></li>
+              <li><a class="dropdown-item" href="login.html">Cerrar Sesión</a></li>
+              <li><a class="dropdown-item"  id="darkMode">Modo Oscuro</a></li>
+            </ul>
+          </div>
         </ul>
       </div>
     </div>
