--- a/product-info.html
+++ b/product-info.html
@@ -4,7 +4,7 @@
   
 </body>
 </html>
-<html lang="es">
+<html lang="es" data-bs-theme="light">
 
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
