--- a/categories.html
+++ b/categories.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es" data-bs-theme="light">
+<html lang="es" data-bs-theme="light" id="htmlElement">
 
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
