--- a/product-info.html
+++ b/product-info.html
@@ -85,6 +85,9 @@
           <button class="btn btn-primary" id="comentBtn">Enviar</button>
         </div>
       </div>
+      <div id="relatedProductsTitle"></div>
+      <div id="relatedProductsContainer" class="card" style="width: 18rem;"></div>
+
     </div>
   </main>
   <footer class="text-muted">
