--- a/product-info.html
+++ b/product-info.html
@@ -60,10 +60,27 @@
     <div id="container">
       
       </div>
+
+      <!-- carousel -->
+      <div id="myCarousel" class="carousel slide">
+        <div class="carousel-inner">
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#myCarousel" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+        </button>
+    </div>
+     <!-- fin del carousel -->
+
       <div id="containerComentarios">
 
       </div>
       <!--Se crea el formulario para ingresar comentarios.-->
+      
       <div>
         <br>
         <h2>Comentar</h2>
