--- a/cart.html
+++ b/cart.html
@@ -47,10 +47,7 @@
     </div>
   </nav>
   <main>
-    <div class="container">
-      <div class="alert alert-danger text-center" role="alert">
-        <h4 class="alert-heading">Funcionalidad en desarrollo</h4>
-      </div>
+    <div class="container" id="cartContainer">
     </div>
   </main>
   <footer class="text-muted">
