--- a/product-info.html
+++ b/product-info.html
@@ -58,6 +58,7 @@
     <fieldset class="row align-items-center col-md-8 mx-auto"> 
 
     <div id="container">
+      <button type="button" class="btn btn-primary">Primary</button>
       
       </div>
 
