--- a/cart.html
+++ b/cart.html
@@ -47,6 +47,7 @@
     </div>
   </nav>
   <main>
+    <h1 class = "text-center"> Carrito de compras </h1>
     <div class="container" id="cartContainer">
     </div>
     
