update resposive design

--- a/cart.html
+++ b/cart.html
@@ -47,7 +47,8 @@
     </div>
   </nav>
   <main>
-    <h1 class = "text-center"> Carrito de compras </h1>
+    <h1 class = "text-center mt-4"> Carrito de compras </h1>
+    <h2 class="m-4">Artículos a comprar</h2>
     <div class="container" id="cartContainer">
     </div>
     
