update parte 1 con error a solucionar

--- a/cart.html
+++ b/cart.html
@@ -92,8 +92,28 @@
             <input type="submit" value="Enviar" class="btn btn-primary">
         </form>
     </div>
+
+    <h2 class="m-4">Costos</h2>
+    <div class="container" id="cost">
+      <table class="table">
+        <tbody>
+          <tr>
+            <td><p>Subtotal</p> <p> Costo de los productos seleccionados.</p></td>
+            <td id="subtotales"></td>
+          </tr>
+          <tr>
+            <td><p>Costo de envío</p> <p> Según el tipo de envío seleccionado.</p></td>
+            <td id="envio"></td>
+          </tr>
+          <tr>
+            <td>Total (U$D)</td>
+            <td id="total"></td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
     
-    </div>  
+      
   </main>
   <footer class="text-muted">
     <div class="container">
