--- a/my-profile.html
+++ b/my-profile.html
@@ -63,10 +63,39 @@
   </nav>
   <main>
     <div class="container">
-      <div class="alert alert-danger text-center" role="alert">
-        <h4 class="alert-heading">Funcionalidad en desarrollo</h4>
-      </div>
+   <h2 class="mt-4">Perfil</h2>
+   <hr>
+   <form class="row g-3">
+    <div class="col-md-6">
+      <label for="inputName" class="form-label">Nombre*</label>
+      <input type="text" class="form-control" id="inputName" required>
     </div>
+    <div class="col-md-6">
+      <label for="inputName2" class="form-label">Segundo nombre</label>
+      <input type="text" class="form-control" id="inputName2">
+    </div>
+    <div class="col-md-6">
+      <label for="inputLastName" class="form-label">Apellido*</label>
+      <input type="text" class="form-control" id="inputLastName" required>
+    </div>
+    <div class="col-md-6">
+      <label for="inputLastName2" class="form-label">Segundo apellido</label>
+      <input type="text" class="form-control" id="inputLastName2">
+    </div>
+    <div class="col-md-6">
+      <label for="inputEmail" class="form-label">Email*</label>
+      <input type="email" class="form-control" id="inputEmail" required>
+    </div>
+    <div class="col-md-6">
+      <label for="inputTel" class="form-label">Teléfono de contacto</label>
+      <input type="number" class="form-control" id="inputTel">
+    </div>
+  </div>
+  <hr>
+  <div class="col-12">
+    <button class="btn btn-primary" type="submit" id="save">Guardar cambios</button>
+  </div>
+</form>
   </main>
   <footer class="text-muted">
     <div class="container">
